# AsmTutor

./: .gitignore  CMakeLists.txt  README.md
AsmTutor/: AsmTutor.cbp  Makefile.am  Makefile.in  README  Tutor.sln  Tutor.userprefs  buffers.h  config.h.in  configure  configure.ac  events.c  main.c  task.h
AsmTutor/ClientUI/: ClientUI.csproj
AsmTutor/Tutor/: AsmTutorWindow.cs  Main.cs  Tutor.csproj
AsmTutor/Tutor/AsmTutorLoadableLevel/: AsmTutorLoadableLevel.csproj  AssemblyInfo.cs  ITester.cs  LoadableLevel.cs  TestResult.cs
AsmTutor/Tutor/AsmTutorLoadableLevel/gtk-gui/: Tutor.Levels.LoadableLevel.cs  gui.stetic
AsmTutor/Tutor/CPUArchitecture/CPU/: AssemblyInfo.cs  CPU.cs  CPUArchitecture.csproj
AsmTutor/Tutor/CPUArchitecture/CPU/Interfaces/: ICpuExecutable.cs
AsmTutor/Tutor/CPUArchitecture/CPU/Sources/: CPU.cs  Immediate.cs  Memory.cs  Operand.cs  X86OperandFactory.cs
AsmTutor/Tutor/CPUArchitecture/CPU/Tests/: CPUTest.cs  DWordTest.cs  OperandTest.cs  X86OperandFactoryTest.cs
AsmTutor/Tutor/CPUArchitecture/CPU/test-results/: CPUArchitecture.csproj-Debug-2013-01-01.xml  CPUArchitecture.csproj-Debug-2013-01-02.xml  CPUArchitecture.csproj.test-cache
AsmTutor/Tutor/CPUArchitecture/InstructionSet/: AssemblyInfo.cs  Instruction.cs  InstructionSet.csproj
AsmTutor/Tutor/CPUArchitecture/InstructionSet/Sources/: Mov.cs
AsmTutor/Tutor/CPUArchitecture/InstructionSet/Tests/: MovTest.cs
AsmTutor/Tutor/CPUArchitecture/InstructionSet/test-results/: InstructionSet.csproj-Debug-2013-01-02.xml  InstructionSet.csproj.test-cache
AsmTutor/Tutor/Tutor/: AsmTutorUI.csproj  AsmTutorWindow.cs  AssemblyInfo.cs  LoadErrorPane.cs  app.desktop
AsmTutor/Tutor/Tutor/gtk-gui/: Tutor.UserInterface.AsmTutorWindow.cs  Tutor.UserInterface.LoadErrorPane.cs  gui.stetic
AsmTutor/Tutor/gtk-gui/: AsmTutorWindow.cs  gui.stetic
AsmTutor/Tutor/test-results/: {35976FE9-82F6-430E-B612-F498729B3818}-default-2013-01-02.xml
AsmTutor/TutorLevels/Level1/: AssemblyInfo.cs  Level.cs  Level1.csproj  LevelBox.cs
AsmTutor/TutorLevels/Level1/gtk-gui/: TutorLevels.LevelBox.cs  gui.stetic
AsmTutor/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
AsmTutor/src/: Makefile.am  Makefile.in  events.c  task.h
AsmTutor/src/.deps/: buffers.Po  events.Po  main.Po
Assembler-Level1/: Assembler-Level1.cbp  Assembler-Level1.depend  Assembler-Level1.layout  buffers.c  config.h  events.c  events.h  main.c  task.h
Assembler-Level1/testasm/: test  test.asm
src/: Makefile.am  Makefile.in  events.cpp  main.cpp
